; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/aty/extr_radeon_base.c_radeon_unmap_ROM.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/aty/extr_radeon_base.c_radeon_unmap_ROM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeonfb_info = type { i32 }
%struct.pci_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.radeonfb_info*, %struct.pci_dev*)* @radeon_unmap_ROM to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @radeon_unmap_ROM(%struct.radeonfb_info* %0, %struct.pci_dev* %1) #0 {
  %3 = alloca %struct.radeonfb_info*, align 8
  %4 = alloca %struct.pci_dev*, align 8
  store %struct.radeonfb_info* %0, %struct.radeonfb_info** %3, align 8
  store %struct.pci_dev* %1, %struct.pci_dev** %4, align 8
  %5 = load %struct.radeonfb_info*, %struct.radeonfb_info** %3, align 8
  %6 = getelementptr inbounds %struct.radeonfb_info, %struct.radeonfb_info* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  br label %16

10:                                               ; preds = %2
  %11 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %12 = load %struct.radeonfb_info*, %struct.radeonfb_info** %3, align 8
  %13 = getelementptr inbounds %struct.radeonfb_info, %struct.radeonfb_info* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @pci_unmap_rom(%struct.pci_dev* %11, i32 %14)
  br label %16

16:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @pci_unmap_rom(%struct.pci_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
